modernize cassandra-unit-examples